--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,7 +5,7 @@
 
 @import 'base/variables';
 @import 'base/mixins';
-
+@import 'blocks/accordion';
 * {
     font-family: 'Inter', sans-serif;
     box-sizing: border-box;
