--- a/src/sass/blocks/footer/_footer_media.scss
+++ b/src/sass/blocks/footer/_footer_media.scss
@@ -19,6 +19,7 @@
         padding: 0 20px;
     }
     .footer {
+        padding: 50px 0;
         min-height: 926px;
         &__wrapper {
             display: grid;
