--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,6 +6,7 @@
 @import 'base/variables';
 @import 'base/mixins';
 @import 'blocks/accordion';
+@import 'blocks/select';
 * {
     font-family: 'Inter', sans-serif;
     box-sizing: border-box;
