--- a/src/sass/blocks/_cloud_instance.scss
+++ b/src/sass/blocks/_cloud_instance.scss
@@ -9,6 +9,7 @@
         }
         &_buttons {
             display: flex;
+            flex-wrap: wrap;
             gap: 10px;
         }
         &_bg {
@@ -47,16 +48,18 @@
         @media(max-width: 768px) {
             display: none;
         }
-        @media(max-width: 576px) {
+        @media (max-width: 576px) {
             display: block;
-            overflow-x: auto;
-            white-space: nowrap;
         }
     }
+
     &__tabs {
         display: flex;
         gap: 30px;
         list-style-type: none;
+        @media(max-width: 576px) {
+            display: flex;
+        }
     }
     &__tab {
         padding: 10px 0;
@@ -80,15 +83,57 @@
         }
     }
     &__first {
+        display: none;
         padding: 100px 0;
         min-height: 340px;
-        display: flex;
         gap: 24px;
         @media(max-width: 768px) {
+            display: flex;
             padding: 50px 0;
             min-height: 352px;
         }
         @media (max-width: 576px) {
+            display: none;
+        }
+        &_hidden {
+            display: none;
+            @media(max-width: 768px){
+                display: flex;
+            }
+            @media(max-width:576px){
+                display: none;
+            }
+        }
+        &_monitoring {
+            &-wrapper {
+                display: none;
+                @media(max-width:768px){
+                    display: flex;
+                    margin-bottom: 50px;
+                    gap: 14px;
+                    align-items: start;
+                }
+                @media(max-width:576px){
+                    display: none;
+                }
+            }
+            &-title {
+                font-weight: 600;
+            }
+            &-descr {
+                margin-top: 2px;
+                font-style: normal;
+                font-weight: 400;
+                font-size: 17px;
+                line-height: 26px;
+                color: rgba(0, 0, 0, 0.8);
+            }
+        }
+    }
+    &__content {
+        display: none;
+        &_active {
+            display: flex;
             min-height: auto;
         }
     }
@@ -123,6 +168,7 @@
         color: $heading-text;
         @media (max-width: 576px) {
             max-width: 179px;
+            margin: 0;
         }
     }
     &__right {
@@ -259,7 +305,7 @@
             display: flex;
             justify-content: space-between;
             margin-top: 56px;
-            @media (max-width: 768px) {
+            @media (max-width: 992px) {
                 margin-top: 30px;
                 flex-direction: column;
                 gap: 30px;
@@ -274,13 +320,44 @@
             flex-direction: column;
             max-width: 342px;
             max-height: 380px;
-            @media (max-width: 768px) {
+            @media (max-width: 1200px) {
+                max-width: 30%;
+            }
+            @media (max-width: 992px) {
                 max-width: 100%;
                 gap: 10px;
             }
             img {
                 width: 48px;
                 height: 48px;
+            }
+        }
+        &_descr {
+            font-style: normal;
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 26px;
+            color: $heading-text;
+            @media (max-width: 1200px) {
+                font-size: 16px;
+                line-height: 22px;
+            }
+            @media (max-width: 992px) {
+                font-size: 18px;
+                line-height: 26px;
+            }
+        }
+        &_link {
+            font-weight: 500;
+            font-size: 18px;
+            line-height: 26px;
+            @media (max-width: 1200px) {
+                font-size: 15px;
+                line-height: 22px;
+            }
+            @media (max-width: 992px) {
+                font-size: 18px;
+                line-height: 26px;
             }
         }
     }
@@ -320,7 +397,7 @@
             gap: 10px;
             position: relative;
             z-index: 2;
-            @media(max-width: 768px) {
+            @media(max-width: 1200px) {
                 flex-wrap: wrap;
                 gap: 40px;
             }
@@ -338,6 +415,10 @@
             @media(max-width: 768px) {
                 max-width: 100%;
                 font-size: 44px;
+            }
+            @media(max-width:576px) {
+                font-size: 36px;
+                line-height: 44px;
             }
             @media(max-width: 428px) {
                 font-size: 23px;
@@ -379,7 +460,8 @@
         &_bg {
             position: absolute;
             left: 0;
-            top: 100px;
+            bottom: -100px;
+            width: 100%;
             @media(max-width: 768px) {
                 display: none;
             }
@@ -420,8 +502,13 @@
     &__item {
         &-cloud {
             margin: 0;
-            li a {
-                color: $heading-text;
+            &_active {
+                a {
+                    color: $link-color;
+                }
+                border-left: 3px solid #4671f6;
+                padding: 13px 20px;
+                transition: all .3s;
             }
         }
     }
@@ -430,14 +517,14 @@
 .documentation__list {
     margin: 0;
 }
-.active {
-    border-left: 3px solid #4671F6;
-    padding: 13px 20px;
-    transition: all 0.3s;
-}
 .divider {
     display: block;
     width: 100%;
     height: 1px;
     background: rgba(0, 0, 0, 0.2);
 }
+.tab-container {
+    overflow-x: auto;
+    white-space: nowrap;
+}
+
