--- a/src/sass/blocks/_select.scss
+++ b/src/sass/blocks/_select.scss
@@ -21,10 +21,14 @@
         line-height: 20px;
     }
     &_title {
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 26px;
-        color: #474B53;
+        display: none;
+        @media(max-width: 992px) {
+            display: block;
+            font-weight: 500;
+            font-size: 18px;
+            line-height: 26px;
+            color: #474B53;
+        }
         @media(max-width: 428px) {
             font-size: 16px;
             line-height: 20px;
